<?xml version="1.0" encoding="utf-8"?>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    >

<LinearLayout
              android:orientation="vertical"
              android:layout_margin="5dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember Me"
        android:id="@+id/rememberMe"
        android:layout_gravity="right"
        android:checked="true" />

    <TableLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Username:"
                    android:id="@+id/username_label"/>

            <EditText
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:gravity="right"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Password:"
                    android:id="@+id/password_label"/>

            <EditText
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/password"/>
        </TableRow>
        <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="login"/>
    </TableLayout>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Repeat Password:"
                    android:id="@+id/password_repeat_label"/>

            <EditText
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/password_repeat"/>
        </TableRow>
        <Button
                android:id="@+id/button_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="create account"/>


    </TableLayout>

</LinearLayout>
    </FrameLayout>