<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Commenting on: Title"
        android:id="@+id/title"
        android:gravity="center"
        style="@style/mysaasa_title_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="vertical"
        style="@style/mysaasa_horm">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Replying to:"
        android:id="@+id/reply"
        android:maxLength="100" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:ems="10"
        android:id="@+id/comment"
        android:layout_weight="1"
        android:hint="Your Reply" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Post Comment"
        android:id="@+id/post" />
        </LinearLayout>
</LinearLayout>