<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.mysaasa.ui.ActivityMain">

    <item android:id="@+id/action_comment"
        android:title="Comment"
        android:icon="@drawable/ic_comment_black_24dp"
        app:showAsAction="always"
        />

    <item android:id="@+id/action_delete"
        android:title="Delete"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_edit"
        android:title="Edit"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        app:showAsAction="ifRoom"
        />

</menu>
