<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <!-- The main content view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:animateLayoutChanges="true">


        <ListView
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/mysaasa_news_list"/>

        <FrameLayout
            style="@style/mysaasa_fragment_frame"
            android:id="@+id/fragment_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone"
        ></FrameLayout>
    </LinearLayout>
    <!-- The navigation drawer -->
    <com.mysaasa.ui.sidenav.LeftNavigationFrameLayout
        style="@style/mysaasa_navigation_menu"
        android:id="@+id/left_drawer"
        android:layout_width="@dimen/sidenav_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        />
</android.support.v4.widget.DrawerLayout>
    <com.mysaasa.ui.views.NetworkProgressBar
        android:id="@+id/progress_indicator"
        android:layout_gravity="right"
        android:layout_width="40dp"
        android:layout_height="40dp"
        />
</FrameLayout>